k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-page-service
spec:
  selector:
    app: web-page
  ports:
  - port: 80
    targetPort: 80
